force-app/main/default/objects/SMS_Zuora_History__c/SMS_Zuora_History__c.object-meta.xml
<CustomObject>
    <label>SMS Zuora History</label>
    <nameField>
        <displayFormat>SMS-{00000000}</displayFormat>
        <label>SMS Zuora History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Zuora History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>