force-app/main/default/objects/SMS_Zuora_History__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>