force-app/main/default/objects/SMS_Zuora_History__c/fields/Exception_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Name__c</fullName>
    <label>Exception Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>