force-app/main/default/objects/SMS_Zuora_History__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS Zuora History</relationshipLabel>
    <relationshipName>SMS_Zuora_History</relationshipName>
    <type>Lookup</type>
</CustomField>