force-app/main/default/objects/SMS_Zuora_History__c/listViews/Aged_Balances.listView-meta.xml
<ListView>
    <fullName>Aged_Balances</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Status__c</columns>
    <columns>Exception_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>startsWith</operation>
        <value>AgedBalances_Zuora</value>
    </filters>
    <label>Aged Balances</label>
</ListView>