force-app/main/default/objects/SMS_Zuora_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Exception_Name__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>