force-app/main/default/objects/SMS_Zuora_History__c/listViews/Expiring_Credits.listView-meta.xml
<ListView>
    <fullName>Expiring_Credits</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Exception_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>startsWith</operation>
        <value>ExpiringCredits_Zuora</value>
    </filters>
    <label>Expiring Credits</label>
</ListView>